wrapped content into div.container

--- a/src/partials/pages/restaurant/about-kitchen.html
+++ b/src/partials/pages/restaurant/about-kitchen.html
@@ -1,239 +1,241 @@
-<section class="about-our-kitchen container">
-  <h2 class="visually-hidden">About our kitchen</h2>
-  <p class="about-kitchen__title">Amet minim mollit non</p>
-  <span class="about-kitchen__logo">MIMIHO</span>
-  <div class="kitchen-card kitchen-card--top">
-    <p class="kitchen-card__description kitchen-card__description--gray">
-      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-      Velit officia consequat duis enim velit mollit. Exercitation veniam
-      consequat sunt nostrud amet.
-    </p>
-    <picture class="kitchen-card__photo kitchen-card__photo--top">
-      <source
-        srcset="
-          ./images/restaurant/restaurant-1-desk.jpg    1x,
-          ./images/restaurant/restaurant-1-desk-2x.jpg 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ./images/restaurant/restaurant-1-tab.jpg    1x,
-          ./images/restaurant/restaurant-1-tab-2x.jpg 2x
-        "
-        media="(min-width: 1024px)"
-      />
-      <source
-        srcset="
-          ./images/restaurant/restaurant-1-mob.jpg    1x,
-          ./images/restaurant/restaurant-1-mob-2x.jpg 2x
-        "
-        media="(min-width: 414px)"
-      />
-      <img
-        src="./images/restaurant/restaurant-1-mob.jpg"
-        alt="повар готує на кухні"
-      />
-    </picture>
-  </div>
-  <div class="kitchen-card kitchen-card--bottom">
-    <picture class="kitchen-card__photo kitchen-card__photo--bottom">
-      <source
-        srcset="
-          ./images/restaurant/restaurant-2-desk.jpg    1x,
-          ./images/restaurant/restaurant-2-desk-2x.jpg 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ./images/restaurant/restaurant-2-tab.jpg    1x,
-          ./images/restaurant/restaurant-2-tab-2x.jpg 2x
-        "
-        media="(min-width: 1024px)"
-      />
-      <source
-        srcset="
-          ./images/restaurant/restaurant-2-mob.jpg    1x,
-          ./images/restaurant/restaurant-2-mob-2x.jpg 2x
-        "
-        media="(min-width: 414px)"
-      />
-      <img
-        src="./images/restaurant/restaurant-2-mob.jpg"
-        alt="м'ясо на дошці для нарізання"
-      />
-    </picture>
-    <p class="kitchen-card__description kitchen-card__description--orange">
-      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-      Velit officia consequat duis enim velit mollit. Exercitation veniam
-      consequat sunt nostrud amet.
-    </p>
-  </div>
-
-  <div class="kitchen-slider-box">
-    <div class="kitchen-slider">
-      <div class="kitchen-slide">
-        <picture>
-          <source
-            srcset="
-              ./images/sliders/slider-6-desk.jpg 1x,
-              ./images/sliders/slider-6-desk.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-6-tab.jpg 1x,
-              ./images/sliders/slider-6-tab.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-6-mob.jpg 1x,
-              ./images/sliders/slider-6-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class="autoplay__photo"
-            src="./images/sliders/slider-6-mob.jpg"
-            alt="наливають чай у чашку"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div class="kitchen-slide">
-        <picture>
-          <source
-            srcset="
-              ./images/sliders/slider-7-desk.jpg 1x,
-              ./images/sliders/slider-7-desk.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-7-tab.jpg 1x,
-              ./images/sliders/slider-7-tab.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-7-mob.jpg 1x,
-              ./images/sliders/slider-7-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class="autoplay__photo"
-            src="./images/sliders/slider-7-mob.jpg"
-            alt="устриці та шампанське"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div class="kitchen-slide">
-        <picture>
-          <source
-            srcset="
-              ./images/sliders/slider-9-desk.jpg 1x,
-              ./images/sliders/slider-9-desk.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-9-tab.jpg 1x,
-              ./images/sliders/slider-9-tab.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-9-mob.jpg 1x,
-              ./images/sliders/slider-9-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class="autoplay__photo"
-            src="./images/sliders/slider-9-mob.jpg"
-            alt="гарно сервірований стіл на вулиці"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div class="kitchen-slide">
-        <picture>
-          <source
-            srcset="
-              ./images/sliders/slider-15-desk.jpg 1x,
-              ./images/sliders/slider-15-desk.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-15-tab.jpg 1x,
-              ./images/sliders/slider-15-tab.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-15-mob.jpg 1x,
-              ./images/sliders/slider-15-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class="autoplay__photo"
-            src="./images/sliders/slider-15-mob.jpg"
-            alt="гарно сервірований стіл у приміщенні"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
-      <div class="kitchen-slide">
-        <picture>
-          <source
-            srcset="
-              ./images/sliders/slider-16-desk.jpg 1x,
-              ./images/sliders/slider-16-desk.jpg 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-16-tab.jpg 1x,
-              ./images/sliders/slider-16-tab.jpg 2x
-            "
-            media="(min-width: 1024px)"
-          />
-          <source
-            srcset="
-              ./images/sliders/slider-16-mob.jpg 1x,
-              ./images/sliders/slider-16-mob.jpg 2x
-            "
-            media="(min-width: 414px)"
-          />
-          <img
-            class="autoplay__photo"
-            src="./images/sliders/slider-16-mob.jpg"
-            alt="сніданок у ліжко"
-            width="245"
-            height="245"
-          />
-        </picture>
-      </div>
+<section class="about-our-kitchen">
+  <div class="container">
+    <h2 class="visually-hidden">About our kitchen</h2>
+    <p class="about-kitchen__title">Amet minim mollit non</p>
+    <span class="about-kitchen__logo">MIMIHO</span>
+    <div class="kitchen-card kitchen-card--top">
+      <p class="kitchen-card__description kitchen-card__description--gray">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+      <picture class="kitchen-card__photo kitchen-card__photo--top">
+        <source
+          srcset="
+            ./images/restaurant/restaurant-1-desk.jpg    1x,
+            ./images/restaurant/restaurant-1-desk-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./images/restaurant/restaurant-1-tab.jpg    1x,
+            ./images/restaurant/restaurant-1-tab-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./images/restaurant/restaurant-1-mob.jpg    1x,
+            ./images/restaurant/restaurant-1-mob-2x.jpg 2x
+          "
+          media="(min-width: 414px)"
+        />
+        <img
+          src="./images/restaurant/restaurant-1-mob.jpg"
+          alt="повар готує на кухні"
+        />
+      </picture>
     </div>
-    <div class="slider-arrows"></div>
+    <div class="kitchen-card kitchen-card--bottom">
+      <picture class="kitchen-card__photo kitchen-card__photo--bottom">
+        <source
+          srcset="
+            ./images/restaurant/restaurant-2-desk.jpg    1x,
+            ./images/restaurant/restaurant-2-desk-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./images/restaurant/restaurant-2-tab.jpg    1x,
+            ./images/restaurant/restaurant-2-tab-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./images/restaurant/restaurant-2-mob.jpg    1x,
+            ./images/restaurant/restaurant-2-mob-2x.jpg 2x
+          "
+          media="(min-width: 414px)"
+        />
+        <img
+          src="./images/restaurant/restaurant-2-mob.jpg"
+          alt="м'ясо на дошці для нарізання"
+        />
+      </picture>
+      <p class="kitchen-card__description kitchen-card__description--orange">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+    </div>
+
+    <div class="kitchen-slider-box">
+      <div class="kitchen-slider">
+        <div class="kitchen-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-6-desk.jpg 1x,
+                ./images/sliders/slider-6-desk.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-6-tab.jpg 1x,
+                ./images/sliders/slider-6-tab.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-6-mob.jpg 1x,
+                ./images/sliders/slider-6-mob.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-6-mob.jpg"
+              alt="наливають чай у чашку"
+              width="245"
+              height="245"
+            />
+          </picture>
+        </div>
+        <div class="kitchen-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-7-desk.jpg 1x,
+                ./images/sliders/slider-7-desk.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-7-tab.jpg 1x,
+                ./images/sliders/slider-7-tab.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-7-mob.jpg 1x,
+                ./images/sliders/slider-7-mob.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-7-mob.jpg"
+              alt="устриці та шампанське"
+              width="245"
+              height="245"
+            />
+          </picture>
+        </div>
+        <div class="kitchen-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-9-desk.jpg 1x,
+                ./images/sliders/slider-9-desk.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-9-tab.jpg 1x,
+                ./images/sliders/slider-9-tab.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-9-mob.jpg 1x,
+                ./images/sliders/slider-9-mob.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-9-mob.jpg"
+              alt="гарно сервірований стіл на вулиці"
+              width="245"
+              height="245"
+            />
+          </picture>
+        </div>
+        <div class="kitchen-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-15-desk.jpg 1x,
+                ./images/sliders/slider-15-desk.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-15-tab.jpg 1x,
+                ./images/sliders/slider-15-tab.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-15-mob.jpg 1x,
+                ./images/sliders/slider-15-mob.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-15-mob.jpg"
+              alt="гарно сервірований стіл у приміщенні"
+              width="245"
+              height="245"
+            />
+          </picture>
+        </div>
+        <div class="kitchen-slide">
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-16-desk.jpg 1x,
+                ./images/sliders/slider-16-desk.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-16-tab.jpg 1x,
+                ./images/sliders/slider-16-tab.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-16-mob.jpg 1x,
+                ./images/sliders/slider-16-mob.jpg 2x
+              "
+              media="(min-width: 414px)"
+            />
+            <img
+              class="autoplay__photo"
+              src="./images/sliders/slider-16-mob.jpg"
+              alt="сніданок у ліжко"
+              width="245"
+              height="245"
+            />
+          </picture>
+        </div>
+      </div>
+      <div class="slider-arrows"></div>
+    </div>
   </div>
 </section>
