--- a/src/partials/pages/restaurant/menu.html
+++ b/src/partials/pages/restaurant/menu.html
@@ -5,24 +5,22 @@
     <table class="menu__table">
       <tbody class="menu__data">
         <tr>
-          <th class="menu__subtitle menu__subtitle--not-pt" colspan="3">
-            Гарячі страви
-          </th>
+          <th class="menu__dish-name" colspan="3">Гарячі страви</th>
         </tr>
         <tr>
-          <td>
-            <p class="menu__meal">Борщ з телятини з квасолею</p>
+          <td class="menu__column--dish">
+            <h4 class="menu__dish">Борщ з телятини з квасолею</h4>
             <p class="menu__ingredients">
               Телятина, картопля, капуста, морква, цибуля, квасоля, часник,
               помідори, зелень, сметана
             </p>
           </td>
-          <td class="menu__weight">400 г</td>
-          <td class="menu__price">240 грн</td>
+          <td class="menu__weight menu__column--weight">400 г</td>
+          <td class="menu__price menu__column--price">240 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Суп сирний з куркою</p>
+            <h4 class="menu__dish">Суп сирний з куркою</h4>
             <p class="menu__ingredients">
               Курятина, картопля, морква, цибуля, печериці, сир м’який, зелень
             </p>
@@ -32,7 +30,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Паста карбонара</p>
+            <h4 class="menu__dish">Паста карбонара</h4>
             <p class="menu__ingredients">
               Паста тальятеле, бекон, вершки, сир пармезан, яйце, зелень
             </p>
@@ -42,7 +40,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Стейк зі свинини</p>
+            <h4 class="menu__dish">Стейк зі свинини</h4>
             <p class="menu__ingredients">
               Свиняча вирізка, спеціі, подається з соусом солодкий чилі та
               овочами
@@ -53,7 +51,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Горбуша в соусі з білого вина</p>
+            <h4 class="menu__dish">Горбуша в соусі з білого вина</h4>
             <p class="menu__ingredients">
               Ніжна горбуша, вершковий соус на основі білого вина
             </p>
@@ -63,11 +61,11 @@
         </tr>
 
         <tr>
-          <th class="menu__subtitle" colspan="3">Гарніри та закуски</th>
+          <th class="menu__dish-name" colspan="3">Гарніри та закуски</th>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Запечені овочі</p>
+            <h4 class="menu__dish">Запечені овочі</h4>
             <p class="menu__ingredients">Кабачок, перець, помідор, баклажан</p>
           </td>
           <td class="menu__weight">200 г</td>
@@ -75,7 +73,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Картопля фрі</p>
+            <h4 class="menu__dish">Картопля фрі</h4>
             <p class="menu__ingredients">Картопля, соус томатний</p>
           </td>
           <td class="menu__weight">150 г</td>
@@ -83,7 +81,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Картопля по-селянськи</p>
+            <h4 class="menu__dish">Картопля по-селянськи</h4>
             <p class="menu__ingredients">Картопля, спеції, соус пікантний</p>
           </td>
           <td class="menu__weight">150 г</td>
@@ -91,7 +89,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Хрумкі соління з бочки</p>
+            <h4 class="menu__dish">Хрумкі соління з бочки</h4>
             <p class="menu__ingredients">
               Огірок солений, помідор квашений, квашена капуста, морква
               по-корейські
@@ -102,7 +100,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Крильця курячі в медовому соусі</p>
+            <h4 class="menu__dish">Крильця курячі в медовому соусі</h4>
             <p class="menu__ingredients">
               Крильця курячі, гірчично-медовий соус, подається з морквою,
               селерою і соусом блючиз
@@ -115,24 +113,22 @@
 
       <tbody class="menu__data">
         <tr>
-          <th class="menu__subtitle menu__subtitle--not-pt" colspan="3">
-            Салати
-          </th>
+          <th class="menu__dish-name" colspan="3">Салати</th>
         </tr>
         <tr>
-          <td>
-            <p class="menu__meal">Цезар з куркою</p>
+          <td class="menu__column--dish">
+            <h4 class="menu__dish">Цезар з куркою</h4>
             <p class="menu__ingredients">
               Куряче філе, листя салату, помідори чері, сир пармезан, грінки,
               соус цезар
             </p>
           </td>
-          <td class="menu__weight">230 г</td>
-          <td class="menu__price">450 грн</td>
+          <td class="menu__weight menu__column--weight">230 г</td>
+          <td class="menu__price menu__column--price">450 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Цезар з креветками</p>
+            <h4 class="menu__dish">Цезар з креветками</h4>
             <p class="menu__ingredients">
               Тигрові креветки, листя салату, помідори чері, сир пармезан,
               грінки, соус цезар
@@ -143,7 +139,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">Грецький салат</p>
+            <h4 class="menu__dish">Грецький салат</h4>
             <p class="menu__ingredients">
               Свіжі огірок, помідор, болгарський перець, оливки, сир бринза,
               листя салату, соус
@@ -154,7 +150,7 @@
         </tr>
         <tr>
           <td>
-            <p class="menu__meal">М’ясний салат</p>
+            <h4 class="menu__dish">М’ясний салат</h4>
             <p class="menu__ingredients">
               Куряче філе або свиняча вирізка, свіжі огірок, помідор,
               болгарський перець, соус ранч
@@ -165,64 +161,64 @@
         </tr>
 
         <tr>
-          <th class="menu__subtitle" colspan="3">Десерти</th>
+          <th class="menu__dish-name" colspan="3">Десерти</th>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Торт наполеон</p>
+            <h4 class="menu__dish menu__dish--short">Торт наполеон</h4>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Торт маковий</p>
+            <h4 class="menu__dish menu__dish--short">Торт маковий</h4>
           </td>
           <td class="menu__weight">230 г</td>
           <td class="menu__price">300 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Тірамісу</p>
+            <h4 class="menu__dish menu__dish--short">Тірамісу</h4>
           </td>
           <td class="menu__weight">120 г</td>
           <td class="menu__price">260 грн</td>
         </tr>
 
         <tr>
-          <th class="menu__subtitle" colspan="3">Напої</th>
+          <th class="menu__dish-name" colspan="3">Напої</th>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Чай чорний/зелений</p>
+            <h4 class="menu__dish menu__dish--short">Чай чорний/зелений</h4>
           </td>
           <td class="menu__weight">500 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Еспресо</p>
+            <h4 class="menu__dish menu__dish--short">Еспресо</h4>
           </td>
           <td class="menu__weight">30 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Американо</p>
+            <h4 class="menu__dish menu__dish--short">Американо</h4>
           </td>
           <td class="menu__weight">150 г</td>
           <td class="menu__price">100 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Капучино</p>
+            <h4 class="menu__dish menu__dish--short">Капучино</h4>
           </td>
           <td class="menu__weight">200 г</td>
           <td class="menu__price">160 грн</td>
         </tr>
         <tr>
           <td>
-            <p class="menu__meal menu__meal--short">Лате</p>
+            <p class="menu__dish menu__dish--short">Лате</p>
           </td>
           <td class="menu__weight">200 г</td>
           <td class="menu__price">160 грн</td>
