--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -121,8 +121,11 @@ div.kitchen-slide.slick-slide {
 // KITCHEN SLIDER ARROWS
 .slider-arrows {
   display: inline-flex;
+  width: 100%;
   gap: 32px;
-  margin: 20px auto 0 286px;
+  margin-top: 20px;
+  justify-content: flex-end;
+  padding-right: 2px;
 }
 
 .right-arrow,
