origin/feature/room-luxe-amenities/button

--- a/src/partials/pages/room-luxe/amenities.html
+++ b/src/partials/pages/room-luxe/amenities.html
@@ -77,9 +77,7 @@
       </li>
     </ul>
 
-    <button class="amenities__button" data-modal-open>
-      Оформити бронювання
-    </button>
+    <button class="button" data-modal-open>Оформити бронювання</button>
     <a href="./hotel.html" class="link__amenities"
       >Повернутися до перегляду номерів
       <svg width="24" height="24" class="amenities__icon">
