--- a/src/sass/pages/room-luxe/_amenities.scss
+++ b/src/sass/pages/room-luxe/_amenities.scss
@@ -54,12 +54,11 @@
     }
 
     &__discription {
-        font-family: 'Montserrat';
-        font-size: 16px;
+     
         line-height: 1.25;
         font-weight: 700;
         color: $colorTextRooms;
-
+margin-bottom: 32px;
         @include tablet {
             line-height: 1.21;
             width: 400px;
@@ -79,7 +78,7 @@
         line-height: 1;
         color: $colorBlack;
         text-transform: uppercase;
-        margin-top: 32px;
+        
         margin-bottom: 16px;
 
         @include tablet {
@@ -110,20 +109,21 @@
 
     }
 
-    &__button {
-        background-color: $colorBtnBlack;
-        color: $colorBtnWhite;
-        font-family: 'Montserrat';
-        font-size: 20px;
-        line-height: 1.2;
-        text-transform: uppercase;
+   .button {
+    
+        // background-color: $colorBtnBlack;
+        // color: $colorBtnWhite;
+        // font-family: 'Montserrat';
+        // font-size: 20px;
+        // line-height: 1.2;
+        // text-transform: uppercase;
 
-        border-radius: 25px;
-        border: 1px solid $colorAccentYellow;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        white-space: nowrap;
+        // border-radius: 25px;
+        // border: 1px solid $colorAccentYellow;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        // white-space: nowrap;
 
        
 
@@ -134,7 +134,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 16px;
-            margin-top: 16px;
+            // margin-top: 16px;
         }
 
         @include mobile {
@@ -152,10 +152,11 @@
             margin-left: auto;
             width: 434px;
             padding: 18px 38px;
+           
         }
 
         @include desktop {
-            margin-left: 563px;
+            
         }
     }
 
