--- a/src/partials/pages/hotel/room-for-3.html
+++ b/src/partials/pages/hotel/room-for-3.html
@@ -44,8 +44,8 @@
         </picture>
       </li>
     </ul>
-    <div class="room-for-3-tablet__wrap">
-      <div class="room-for-3-image">
+    <div class="room-for-3__slider">
+      <div class="room-for-3__bathroom">
         <picture>
           <source
             srcset="
@@ -74,7 +74,7 @@
             sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
           />
         </picture>
-        <div class="room-for-3-image">
+        <div>
           <picture>
             <source
               srcset="
@@ -104,23 +104,171 @@
             />
           </picture>
         </div>
-        <div class="room-for-3__svg">
-          <svg class="room-for-3__left" width="32" height="32">
-            <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
-          </svg>
-          <svg class="room-for-3__right" width="32" height="32">
-            <use href="./images/sprite.svg#icon-cil_arrow-right32"></use>
-          </svg>
+        <div>
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-2-desk.jpg    1x,
+                ./images/sliders/slider-2-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-2-tab.jpg    1x,
+                ./images/sliders/slider-2-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-2-tab.jpg    1x,
+                ./images/sliders/slider-2-tab-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+            <img
+              src="./images/sliders/slider-2-desk.jpg"
+              alt="краєвид з вікна"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            />
+          </picture>
+        </div>
+        <div>
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-4-desk.jpg    1x,
+                ./images/sliders/slider-4-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-4-tab.jpg    1x,
+                ./images/sliders/slider-4-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-4-tab.jpg    1x,
+                ./images/sliders/slider-4-tab-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+            <img
+              src="./images/sliders/slider-4-desk.jpg"
+              alt="краєвид з вікна"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            />
+          </picture>
+        </div>
+        <div>
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-10-desk.jpg    1x,
+                ./images/sliders/slider-10-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-10-tab.jpg    1x,
+                ./images/sliders/slider-10-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-10-tab.jpg    1x,
+                ./images/sliders/slider-10-tab-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+            <img
+              src="./images/sliders/slider-10-desk.jpg"
+              alt="краєвид з вікна"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            />
+          </picture>
+        </div>
+        <div>
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-12-desk.jpg    1x,
+                ./images/sliders/slider-12-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-12-tab.jpg    1x,
+                ./images/sliders/slider-12-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-12-tab.jpg    1x,
+                ./images/sliders/slider-12-tab-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+            <img
+              src="./images/sliders/slider-12-desk.jpg"
+              alt="краєвид з вікна"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            />
+          </picture>
+        </div>
+        <div>
+          <picture>
+            <source
+              srcset="
+                ./images/sliders/slider-13-desk.jpg    1x,
+                ./images/sliders/slider-13-desk-2x.jpg 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-13-tab.jpg    1x,
+                ./images/sliders/slider-13-tab-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
+                ./images/sliders/slider-13-tab.jpg    1x,
+                ./images/sliders/slider-13-tab-2x.jpg 2x
+              "
+              media="(min-width: 320px)"
+            />
+            <img
+              src="./images/sliders/slider-13-desk.jpg"
+              alt="краєвид з вікна"
+              sizes="(min-width: 1280px) 254px, (min-width: 1024px) 194px, 194px"
+            />
+          </picture>
         </div>
       </div>
-      <div class="room-for-3-btn__wrap">
-        <a href="./room-for-3.html" class="room-for-3__details btn"
-          >Детальніше</a
-        >
-        <button type="button" class="room-for-3__btn-price btn" data-modal-open>
-          Переглянути ціни
-        </button>
-      </div>
+    </div>
+    <div class="room-for-3__svg">
+      <svg class="room-for-3__left" width="32" height="32">
+        <use href="./images/sprite.svg#icon-cil_arrow-left32"></use>
+      </svg>
+      <svg class="room-for-3__right" width="32" height="32">
+        <use href="./images/sprite.svg#icon-cil_arrow-right32"></use>
+      </svg>
+    </div>
+    <div class="room-for-3-btn__wrap">
+      <a href="./room-for-3.html" class="room-for-3__details btn">Детальніше</a>
+      <button type="button" class="room-for-3__btn-price btn" data-modal-open>
+        Переглянути ціни
+      </button>
     </div>
   </div>
 </section>
