--- a/src/sass/components/_modal-price.scss
+++ b/src/sass/components/_modal-price.scss
@@ -8,7 +8,6 @@
     min-height: 572px;
     overflow: scroll;
 
-    font-size: 0;
     border-radius: 2px;
     background-color: $colorBgLemon;
     
@@ -79,27 +78,55 @@
 .wrapper-group{
     @include tablet {
         display: flex;
+        gap: 16px;
     }
     
 }
 .wrapper-input{
-        margin-bottom: 20px;
+    margin-bottom: 20px;
+    @include calc-width(1, 16px);
+    @include tablet {
+        @include calc-width(2, 16px);
+    }
+}
+
+.modal-price__input-cast, .modal-price__input-cost{
+    position: relative;
+    margin-bottom: 8px;
+}
+
+.custom-select{
+    @include tablet{
+
+    }
 }
 .wrapper-last{
     margin-bottom: 40px;
 }
 .modal-price__user-name {
 }
-.modal-price__input-wrapper {
-}
-.modal-price__input {
-    margin-bottom: 8px;
-    width: 384px;
+// .modal-price__input-cast > .modal-price__input{
+//     @include tablet {
+   
+//             display: none;
+   
+//     }
+// }
+.modal-price__input, .modal-price__select {
+
+    width: 100%;
     height: 54px;
     background-color:  $colorBgLemon;
     border: 1px solid $colorBrown;
+    padding-left: 15px;
+    font-family: 'Times New Roman';
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.05em;
+    color: $colorTextModal;
+
     &::placeholder {
-        padding-left: 15px;
         font-family: 'Times New Roman';
         font-weight: 700;
         font-size: 24px;
@@ -107,6 +134,9 @@
         letter-spacing: 0.05em;
         color: $colorTextModal;
     }
+}
+
+.input-cast {
     @include tablet {
         display: none;
     }
@@ -119,7 +149,43 @@
     }
 }
 
-.modal-price__label {
+.modal-price__label, .modal-price__label-select {
     margin-left: 15px;
-    // display: inline-block;
+}
+.cast .modal-price__label{
+    @include tablet{
+        display: none;
+    }
+}
+
+.cast .modal-price__label-select{
+    display: none;
+    @include tablet{
+        display: inline;
+    }
+}
+
+.modal-price__icon{
+    display: none;
+    @include tablet {
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+        fill: $colorBrown;
+    }
+}
+
+.shade {
+    @include tablet {
+        position: absolute;
+        top: 50%;
+        right: 6px;
+        transform: translateY(-50%);
+        width: 10px;
+        height: 10px;
+        background-color: $colorBgLemon;
+
+    }
 }
