--- a/src/partials/pages/hotel/room-for-2.html
+++ b/src/partials/pages/hotel/room-for-2.html
@@ -1,14 +1,104 @@
-<section class="section-light">
-    <div class="container">
-        <p class="hotel-pre-title">Amet minim mollit non</p>
-        <span class="logo">Mimiho</span>
-        <h2 class="hotel-title">Двомісний номер</h2>
-        <p class="hotel-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        <picture>
-            <source srcset="/src/images/main/details-hotel/">
-        </picture><img src="" alt="" width="">
-        <a href="./room-for-2.html" class="about-hotel">Детальніше</a>
-        <button type="button" class="btn" data-modal-open>Переглянути ціни</button>
-        <div></div>
+<section class="section--light">
+  <div class="container">
+    <div class="room-wrap-top">
+      <p class="hotel-pre-title">Amet minim mollit non</p>
+      <span class="logo hotel-logo">Mimiho</span>
+      <h2 class="hotel-title room-title">Двомісний номер</h2>
+      <p class="hotel-text">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
     </div>
+    <div class="room-wrap-center">
+      <picture>
+        <source
+          srcset="
+            ./images/hotel/hotel-1-desk.jpg 1x,
+            ./images/hotel/hotel-1-desk.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./images/hotel/hotel-1-tab.jpg    1x,
+            ./images/hotel/hotel-1-tab-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./images/hotel/hotel-1-mob.jpg    1x,
+            ./images/hotel/hotel-1-mob-2x.jpg 2x
+          "
+          media="(max-width: 1023px)"
+        />
+        <img
+          src="./images/hotel/hotel-1-mob.jpg"
+          alt="фото номера в готелі"
+          width="246"
+        />
+      </picture>
+    </div>
+    <div data-slick='{"slidesToShow": 2, "slidesToScroll": 2}'>
+      <div>
+        <picture
+          ><source
+            srcset="
+              ./images/hotel/hotel-2-desk.jpg    1x,
+              ./images/hotel/hotel-2-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)" />
+          <source
+            srcset="
+              ./images/hotel/hotel-2-tab.jpg    1x,
+              ./images/hotel/hotel-2-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)" />
+          <source
+            srcset="
+              ./images/hotel/hotel-2-mob.jpg    1x,
+              ./images/hotel/hotel-2-mob-2x.jpg 2x
+            "
+            media="(max-width: 1023px)" />
+          <img
+            src="./images/hotel/hotel-2-mob.jpg"
+            alt="фото умивальника"
+            width="194"
+        /></picture>
+      </div>
+      <div>
+        <picture
+          ><source
+            srcset="
+              ./images/hotel/hotel-3-desk.jpg    1x,
+              ./images/hotel/hotel-3-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)" />
+          <source
+            srcset="
+              ./images/hotel/hotel-3-tab.jpg    1x,
+              ./images/hotel/hotel-3-tab-2x.jpg 2x
+            "
+            media="(min-width: 1024px)" />
+          <source
+            srcset="
+              ./images/hotel/hotel-3-mob.jpg    1x,
+              ./images/hotel/hotel-3-mob-2x.jpg 2x
+            "
+            media="(max-width: 1023px)" />
+          <img
+            src="./images/hotel/hotel-3-mob.jpg"
+            alt="фото чашки на підвіконні"
+            width="194"
+        /></picture>
+      </div>
+    </div>
+    <div class="room-wrap-bottom">
+      <a href="./room-for-2.html" class="btn hotel-link">Детальніше</a>
+      <button type="button" class="btn" data-modal-open>
+        Переглянути ціни
+      </button>
+    </div>
+  </div>
 </section>
