--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -71,6 +71,7 @@
   
   font-family: 'Montserrat';
   font-weight: 500;
+  text-transform: uppercase;
   font-size: 20px;
   line-height: calc(24/20);
     
