--- a/src/sass/components/_modal-price.scss
+++ b/src/sass/components/_modal-price.scss
@@ -1,26 +1,4 @@
-.modal-btn-close {
-    position: absolute;
-    top: 16px;
-    right: 16px;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    background-color: transparent;
-    border: 1px solid transparent;
-
-    fill: $colorBlack;
-    transform: rotateZ('0');
-  
-    transition: transform $transDuration $cubic;
-  }
-  
-  .modal-btn-close:hover,
-  .modal-btn-close:focus {
-    transform: rotateZ('180deg');;
-  }
-  
+ 
   .modal {
     position: absolute;
     top: 50%;
@@ -28,7 +6,7 @@
 
     transform: translate(-50%, -50%) scale(1.1);
   
-    max-width: 414px;
+    width: 95%;   
     padding: 60px 15px;
   
     background-color: $colorBgLemon;
@@ -39,6 +17,15 @@
   
     transform: translate(-50%, -50%) scale(1);
     transition: transform $transDuration $cubic;
+
+    @include mobile {
+      width: 414px
+    }
+
+    @include tablet {
+      width: 712px;
+    }
+    
   }
   
   .modal-title {
@@ -50,11 +37,43 @@
     color: $colorBlack;
     text-align: center;
     margin-bottom: 40px;
+
+    @include tablet {
+      font-size: 40px;
+      line-height: 1.15;
+    }
+  }
+
+  .modal-form {
+    @include tablet {
+
+    }
   }
   
+  .modal-list {
+
+    @include tablet {
+     display: flex;
+     justify-content: center;
+     gap: 16px;
+    }
+  }
+
+  .modal-tab-wrap {
+
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+         }
+  }
+
   .modal-field {
     position: relative;
     width: 100%;
+
+    @include tablet {
+      width: 288px;
+    }
   }
   
   .modal-field:not(:last-child) {
@@ -74,10 +93,15 @@
     letter-spacing: 0.02em;
     color: $colorBrown;
     margin-left: 12px;
+
+    @include tablet {
+      font-size: 16px;
+      line-height: 1.25;
+    }
   }
   
-  .modal-input {
-    width: 384px;
+  .modal-input, .select-option {
+    width: 100%;
     height: 54px;
     border: 1px solid $colorBrown;
     padding: 16px 12px;
@@ -85,7 +109,7 @@
     margin-bottom: 8px;
   
     font-family: 'Times New Roman', sans;
-    // font-weight: 700;
+    font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
     letter-spacing: 0.05em;
@@ -94,24 +118,105 @@
     background-color: $colorBgLemon;
   
     transition: border-color $transDuration $cubic;
+
+    @include mobile {
+      width: 95%;
+    }
+
+    @include tablet {
+      width: 288px;
+      height: 64px;
+      font-size: 24px;
+      line-height: 1.17;
+    }
   }
   
   .modal-input:focus {
     box-shadow: 1px 1px 15px 1px $colorTextSecondary;
   }
 
-//   CUSTOM SELECT ARROW
-
-.custom-select-arrow::after {
-    content: '';
+  .modal-btn-close {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 16px;
+    right: 16px;
 
+    padding: 0;
+    margin: 0;
+     
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    background-color: transparent;
     border: 1px solid transparent;
-    width: 24px;
-    height: 24px;
-    background-image: url();
-    background-repeat: no-repeat;
-    background-size: contain;
+
+    color: $colorBlack;
+      
+    transition: color $transDuration $cubic, transform $transDuration $cubic;
   }
+  
+  .modal-btn-close:hover,
+  .modal-btn-close:focus {
+    color: $colorBrown;
+    transform: rotate(90deg);
+  }
+
+
+  .modal-icon-close {
+    display: inline-block;
+    stroke: currentColor;
+    fill: currentColor;
+  }
+
+  
+// CUSTOM SELECT ARROW SPRITE.SVG
+
+.custom-select-arrow {
+  display: inline-block;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  
+  fill: $colorBrown;
+  background-color: $colorBgLemon;
+
+  @include tablet {
+    top: 20px;
+    right: 20px;
+  }
+}
+
+// //   CUSTOM SELECT ARROW
+
+// .custom-select::after {
+//       content: '';
+//       display: inline-block;
+
+//       position: absolute;
+//       top: 15px;
+//       right: 15px;
+//       z-index: 99;
+
+//       width: 24px;
+//       height: 24px;
+
+//       background-image: url(../images/ep_arrow-down-bold.svg);
+//       background-size: cover;
+//       border: 1px solid transparent;
+//       border-image: initial;
+//       background-repeat: no-repeat;
+// }
+
+// select::after {
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+
+//   content: "";
+//   width: 24px;
+//   height: 24px;
+//   background-color: var(--select-arrow);
+//   clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+// }
+
+  
