--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -1,45 +1,45 @@
     <div class="backdrop " data-modal>
-    <div class="modal modal-book-table">
-      <button type="button" class="modal-btn-close" data-modal-close>
-        <svg class="modal-icon-close" width="24" height="24">
+    <div class="modal">
+      <button type="button" class="modal__btn--close" data-modal-close>
+        <svg class="modal__icon--close" width="24" height="24">
           <use href="./images/sprite.svg#icon-close"></use>
         </svg>
       </button>
-      <p class="modal-title">Забронювати столик</p>
-      <form class="modal-form">
-        <div class="modal-list">
-          <div class="modal-tab-wrap">
-            <div class="modal-field">
+      <p class="modal__title">Забронювати столик</p>
+      <form class="modal__form">
+        <div class="modal__list">
+          <div class="modal__wrap">
+            <div class="modal__field">
               <input
                 type="text"
                 name="user-name"
                 id="name"
-                class="modal-input"
+                class="modal__input"
                 placeholder="Ваше ім’я"
                 aria-label="ім’я"
                 required
               />
-              <label for="name" class="modal-label">На кого забронювати столик?</label>
+              <label for="name" class="modal__label">На кого забронювати столик?</label>
             </div>
     
-            <div class="modal-field">
+            <div class="modal__field">
               <input
                 type="tel"
                 name="user-tel"
                 id="tel"
-                class="modal-input"
+                class="modal__input"
                 placeholder="+38 (___) ___-__-__"
                 aria-label="номер телефону"
                 pattern="+[0-9]" 
                 required
               />
-              <label for="tel" class="modal-label">Номер телефону</label>
+              <label for="tel" class="modal__label">Номер телефону</label>
             </div>
           </div>
   
-          <div class="modal-tab-wrap">
-            <div class="modal-field">
-              <select class="modal-input custom-select" id="guests-number" name="guests-number">
+          <div class="modal__wrap">
+            <div class="modal__field">
+              <select class="modal__input custom-select" id="guests-number" name="guests-number">
                <option class="select-option" value="1">1</option>
                <option class="select-option" value="2" selected>2</option>
                <option class="select-option" value="3">3</option>
@@ -49,21 +49,14 @@
                <option class="select-option" value="7">7</option>
              </select>
                           
-             
-              <svg class="custom-select-arrow" width="24" height="24">
-                <use href="./images/sprite.svg#icon-ep_arrow-down-bold"></use>
-              </svg>
-             
- 
-             <label class="modal-label" for="guests-number">Столик на яку кількість осіб?</label>
+             <label class="modal__label" for="guests-number">Столик на яку кількість осіб?</label>
            </div>
              
-           <div class="modal-field">
-              <div class="custom-date">
-              <input class="modal-input table-date-hidden" type="date" name="table-date" id="table-date">
+           <div class="modal__field">
               
-              <label class="modal-label" for="table-date">На яку дату бронювати?</label>
-              </div>
+              <input class="custom-date" type="text" placeholder="Сьогодні" onfocus="(this.type = 'date')" id="table-date" name="table-date">
+              <label class="modal__label" for="table-date">На яку дату бронювати?</label>
+              
            </div>
           </div>
         </div>
