--- a/src/sass/pages/hotel/_room-for-3.scss
+++ b/src/sass/pages/hotel/_room-for-3.scss
@@ -66,13 +66,24 @@
   @include tablet {
     width: 400px;
     margin-right: calc(67px - 47px);
-    margin-bottom: 0;
+    margin-bottom: 169px;
     @include font(null, 16px, null, null);
   }
   @include desktop {
-    width: 400px;
-    margin-bottom: 0;
     margin-right: calc(195px - 85px - 57px);
+    margin-bottom: 188px;
+  }
+}
+
+.room-for-3__list {
+  @include tablet {
+    position: absolute;
+    top: -32px;
+    left: 112px;
+  }
+  @include desktop {
+    top: -32px;
+    left: 180px;
   }
 }
 
@@ -83,16 +94,37 @@
   }
 }
 
+.room-ror-3__slider-wrap {
+  @include tablet {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+
 .room-for-3__slider {
+  margin-bottom: 72px;
   overflow: hidden;
-  margin: 0 0 0 115px;
-  position: relative;
+  margin-left: 115px;
+  @include tablet {
+    margin-bottom: 0;
+    margin-left: 266px;
+  }
+  @include desktop {
+    margin-left: 326px;
+  }
 }
 
 .room-for-3__bathroom {
   display: flex;
-  width: calc(194px * 7);
   gap: 16px;
+  width: calc((194px + 16px) * 7);
+  @include tablet {
+    width: calc((194px + 40px) * 7);
+    gap: 40px;
+  }
+  @include tablet {
+    width: calc((254px + 40px) * 7);
+  }
 }
 
 // .room-for-3-tablet__wrap {
@@ -114,8 +146,6 @@
 // }
 
 .room-for-3__svg {
-  position: absolute;
-  right: 18px;
   fill: $colorBlack;
   cursor: pointer;
   @include tablet {
@@ -142,7 +172,6 @@
 }
 
 .room-for-3-btn__wrap {
-  margin-top: 72px;
   display: flex;
   flex-direction: column;
   align-items: center;
